--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -122,16 +122,12 @@ thead th {
    z-index: 1; /* Ensure the header stays on top */
    box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4); /* shadow for better visibility */
    font-size: 16px;
+   cursor: pointer;
 }
-   th {
-      cursor: pointer;
-   }
-   th.sort-asc::after {
-      content: " \2191"; /* Up arrow */
-   }
-   th.sort-desc::after {
-      content: " \2193"; /* Down arrow */
-   }
+
+ #sortableTable th:hover {
+   background-color: #ddd;
+ }
 
 tbody tr {
    border-top: 1px solid #ddd;
@@ -141,6 +137,12 @@ tbody td {
    padding: 8px;
 }
 
+/* ------------ CSS FOR TABLE TD ------------ */
+.td-name a {
+   font-size: 10px;
+   color: rgb(224, 118, 52);
+   text-decoration: none;
+}
 /* ------------ CSS FOR NUMBERS/ METRICS ------------ */
 
 .front-number {
