--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -49,6 +49,7 @@
          <!-- Headers for Table -->
          <tr>
                <th data-type="string"> Service</th>
+               <th data-type="string"> Owner</th>
                <th data-type="string"> Lang</th>
                <th data-type="string"> Last Version</th>
                <th data-type="date">   Date</th>
@@ -74,7 +75,8 @@
                      <!-- 1st Column (link) -->
                      <td class="td-name"><a href="{{ document.gitInfo.repo }}">{{ document.name }}</a></td>
 
-                     <!-- 3 Columns (Git info)-->
+                     <!-- 4 Columns (Git info)-->
+                     <td class="td_git-owner">{{ document.gitInfo.owner }}</td>
                      <td class="td_git-lang">{{ document.gitInfo.lang }}</td>
                      <td class="td-git-version">{{ document.gitInfo.lastRelease.version }}</td>
                      <td class="td-git-date"><span>{{ document.gitInfo.lastRelease.date | date("YYYY-MM-DD") }}</span><br><span class="days-ago">({{ document.gitInfo.lastRelease.date | daysAgo }})</span></td>
