--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -55,20 +55,20 @@
                <th data-type="string"> Last Release</th>
                <th data-type="date">   Date</th>
 
-               <th data-type="string"> Coverage</th>
-               <th data-type="number"> Bugs</th>
-               <th data-type="number"> Code smell</th>
-               <th data-type="number"> Vulnerabilities</th>
+               <th data-type="string" class="header-sonar-metric"> Coverage</th>
+               <th data-type="number" class="header-sonar-metric"> Bugs</th>
+               <th data-type="number" class="header-sonar-metric"> Code smell</th>
+               <th data-type="number" class="header-sonar-metric"> Vulnerabilities</th>
 
                <th data-type="string"> Version</th>
                <th data-type="string"> Runtime</th>
                <th data-type="date">   Last BOM Import</th>
-               <th data-type="number"></th>
-               <th data-type="number"></th>
-               <th data-type="number"></th>
-               <th data-type="number"></th>
-               <th data-type="number"></th>
-               <th data-type="number"></th>
+               <th data-type="number" class="header-dt-metric">Critical</th>
+               <th data-type="number" class="header-dt-metric">High</th>
+               <th data-type="number" class="header-dt-metric">Medium</th>
+               <th data-type="number" class="header-dt-metric">Low</th>
+               <th data-type="number" class="header-dt-metric">Vulner.</th>
+               <th data-type="number" class="header-dt-metric">Compon.</th>
          </thead>
          <tbody>
          </tr>
