--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -14,6 +14,7 @@
             <span class="header-center-text">Services</span>
         </div>
    </div>
+   <button id="button-share">share</button>
    <!--
       <a href="{{ selfUrl }}">self url</a>
    -->
