--- a/views/layout.njk
+++ b/views/layout.njk
@@ -9,6 +9,7 @@
    <!--<![endif]-->
    <link rel="stylesheet" href="/css/styles.css">
    <title>{% block title %}Services Dashboard{% endblock %}</title>
+   <script src="/js/libs/pako/2.0.4/pako.min.js"></script>
    <script src="/js/utils.js"></script>
 </head>
 <body>
