--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -13,8 +13,16 @@
         <div class="header-center-content">
             <span class="header-center-text">Services</span>
         </div>
-   </div>
-   <button id="button-share">share</button>
+            <div class="header-right-content">
+               <button id="button-share">share</button>
+                   <div id="share-status-message">
+                     <span id="share-status-icon"></span>
+                     <span id="share-status-text"></span>
+                  </div>
+            </div>
+         </div>
+      </div>
+
    <!--
       <a href="{{ selfUrl }}">self url</a>
    -->
