--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -89,10 +89,10 @@
                      <td class="td-name"><a href="{{ document.gitInfo.repo }}">{{ document.name }}</a></td>
 
                      <!-- 4 Columns (Git info)-->
-                     <td class="td_git-owner">{{ document.gitInfo.owner }}</td>
-                     <td class="td_git-lang">{{ document.gitInfo.lang }}</td>
-                     <td class="td-git-version">{{ document.gitInfo.lastRelease.version }}</td>
-                     <td class="td-git-date"><span>{{ document.gitInfo.lastRelease.date | date("YYYY-MM-DD") }}</span><br><span class="days-ago">({{ document.gitInfo.lastRelease.date | daysAgo }})</span></td>
+                     <td class="td_git-owner"><a href="{{ document.gitInfo.repo }}/settings/custom-properties">{{ document.gitInfo.owner }}</a></td>
+                     <td class="td_git-lang"><a href="{{ document.gitInfo.repo }}">{{ document.gitInfo.lang }}</a></td>
+                     <td class="td-git-version"><a href="{{ document.gitInfo.repo }}/releases">{{ document.gitInfo.lastRelease.version }}</a></td>
+                     <td class="td-git-date"><span><a href="{{ document.gitInfo.repo }}/releases">{{ document.gitInfo.lastRelease.date | date("YYYY-MM-DD") }}</a></span><br><span class="days-ago">({{ document.gitInfo.lastRelease.date | daysAgo }})</span></td>
 
                      <!-- 4 Columns (sonar Metrics) -->
                      <td class="td-met-coverage">{{ document.sonarMetrics.coverage }}</td>
@@ -115,7 +115,7 @@
                         {% else %}
                            <div class="front-number metric-critical-front">
                         {% endif %}
-                              <span title="critical">{{ version.metrics.critical }}</span>
+                              <span title="critical">{{ sonarLink(document.sonarKey, version.metrics.critical) }}</span>
                            </div>
                      </td>
                      <td class="td-sonar-high">
@@ -124,7 +124,7 @@
                         {% else %}
                            <div class="front-number metric-high-front">
                         {% endif %}
-                              <span title="high">{{ version.metrics.high }}</span>
+                              <span title="high">{{ sonarLink(document.sonarKey, version.metrics.high) }}</span>
                            </div>
                      </td>
                      <td class="td-sonar-medium">
@@ -133,7 +133,7 @@
                         {% else %}
                            <div class="front-number metric-medium-front">
                         {% endif %}
-                              <span title="medium">{{ version.metrics.medium }}</span>
+                              <span title="medium">{{ sonarLink(document.sonarKey, version.metrics.medium) }}</span>
                            </div>
                      </td>
                      <td class="td-sonar-low">
@@ -142,7 +142,7 @@
                         {% else %}
                            <div class="front-number metric-low-front">
                         {% endif %}
-                              <span title="low">{{ version.metrics.low }}</span>
+                              <span title="low">{{ sonarLink(document.sonarKey, version.metrics.low) }}</span>
                            </div>
                      </td>
                      <td class="td-sonar-vulnerabilities">
@@ -151,7 +151,7 @@
                         {% else %}
                            <div class="front-number metric-vulnerabilities-front">
                         {% endif %}
-                              <span title="vulnerabilities">{{ version.metrics.vulnerabilities }}</span>
+                              <span title="vulnerabilities">{{ sonarLink(document.sonarKey, version.metrics.vulnerabilities) }}</span>
                            </div>
                      </td>
                      <td class="td-sonar-components">
@@ -160,7 +160,7 @@
                         {% else %}
                            <div class="front-number metric-components-front">
                         {% endif %}
-                              <span title="components">{{ version.metrics.components }}</span>
+                              <span title="components">{{ sonarLink(document.sonarKey, version.metrics.components) }}</span>
                            </div>
                      </td>
             </tr>
@@ -175,3 +175,10 @@
    <span class="footer-text">Built by <a href="https://github.com/companieshouse/services-dashboard-web" class="footer-text">Companies House</a></span>
 {% endblock %}
 
+{% macro sonarLink(sonarKey, val) %}
+    {% if sonarKey %}
+        <a class="sonar-link" href="{{ sonarUri }}/dashboard?id={{ sonarKey | urlencode }}">{{val}}</a>
+    {% else %}
+        {{ val }}
+    {% endif %}
+{% endmacro %}
