--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -165,6 +165,7 @@ tbody td {
    color: rgb(224, 118, 52);
 }
 
+.deptrack-link,
 .sonar-link  {
    text-decoration: none;
    color: inherit; /* Inherit color from parent */
