--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -135,12 +135,13 @@ thead {
 
 .group-service,
 .group-sonar,
-.group-deptrack {
+.group-ecs {
    background-color: #e1b4b4;
 }
 
 .group-git,
-.group-version{
+.group-version,
+.group-deptrack {
    background-color: #f6a8a8;
 }
 
@@ -151,12 +152,13 @@ thead {
 
 .header-service,
 .header-sonar-metric,
-.header-deptrack {
+.header-ecs {
    background-color: #9e9c9c;
 }
 
 .header-git,
-.header-version{
+.header-version,
+.header-deptrack {
    background-color: #c7c6c6;
 }
 
