--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -61,7 +61,7 @@
                <th class="group-header group-git"      colspan="4">Git info</th>
                <th class="group-header group-sonar"    colspan="4">Sonar</th>
                <th class="group-header group-version"  colspan="2">Version info</th>
-               <th class="group-header group-ecs"      colspan="1">ECS</th>
+               <th class="group-header group-ecs"      colspan="3">ECS</th>
                <th class="group-header group-deptrack" colspan="7">Dependency Track</th>
             </tr>
          <!-- Col Headers -->
@@ -82,8 +82,10 @@
                   <th class="col-header header-version"   data-type="string"> Runtime</th>
 
                   <th class="col-header header-ecs"   data-type="string"> cidev</th>
+                  <th class="col-header header-ecs"   data-type="string"> staging</th>
+                  <th class="col-header header-ecs"   data-type="string"> live</th>
 
-                  <th class="col-header header-deptrack" data-type="date"  >Last BOM Import</th>
+                  <th class="col-header header-deptrack" data-type="date"  >Last BOM</th>
                   <th class="col-header header-deptrack header-dt-metric" data-type="number">Critical</th>
                   <th class="col-header header-deptrack header-dt-metric" data-type="number">High</th>
                   <th class="col-header header-deptrack header-dt-metric" data-type="number">Medium</th>
@@ -102,10 +104,10 @@
                      <td class="td-name"><a href="{{ document.gitInfo.repo }}">{{ document.name }}</a></td>
 
                      <!-- 4 Columns (Git info)-->
-                     <td class="td_git-owner">     <a href="{{ document.gitInfo.repo }}/settings/custom-properties">{{ document.gitInfo.owner }}</a></td>
-                     <td class="td_git-lang">      <a href="{{ document.gitInfo.repo }}">                           {{ document.gitInfo.lang }}</a></td>
-                     <td class="td-git-version">   <a href="{{ document.gitInfo.repo }}/releases">                  {{ document.gitInfo.lastRelease.version }}</a></td>
-                     <td class="td-git-date"><span><a href="{{ document.gitInfo.repo }}/releases">                  {{ document.gitInfo.lastRelease.date | date("YYYY-MM-DD") }}</a></span><br><span class="days-ago">({{ document.gitInfo.lastRelease.date | daysAgo }})</span></td>
+                     <td class="td_git-owner">     <a href="{{ document.gitInfo.repo }}/custom-properties">{{ document.gitInfo.owner }}</a></td>
+                     <td class="td_git-lang">      <a href="{{ document.gitInfo.repo }}">                  {{ document.gitInfo.lang }}</a></td>
+                     <td class="td-git-version">   <a href="{{ document.gitInfo.repo }}/releases">         {{ document.gitInfo.lastRelease.version }}</a></td>
+                     <td class="td-git-date"><span><a href="{{ document.gitInfo.repo }}/releases">         {{ document.gitInfo.lastRelease.date | date("YYYY-MM-DD") }}</a></span><br><span class="days-ago">({{ document.gitInfo.lastRelease.date | daysAgo }})</span></td>
 
                      <!-- 4 Columns (sonar Metrics) -->
                      <td class="td-met-coverage">       {{ sonarLink(document.sonarKey, document.sonarMetrics.coverage) }}</td>
@@ -113,7 +115,7 @@
                      <td class="td-met-smells">         {{ sonarLink(document.sonarKey, document.sonarMetrics.code_smells) }}</td>
                      <td class="td-met-vulnerabilities">{{ sonarLink(document.sonarKey, document.sonarMetrics.vulnerabilities) }}</td>
 
-                     <!-- 9 Columns (Version specific) -->
+                     <!-- 2 Columns Version & Runtime-->
                      <td class="td-version">{{ version.version }}</td>
                      <td class="td-runtime">
                         {% if version.runtime.length > 1 %}
@@ -122,8 +124,12 @@
                            {{ version.runtime[0] }}
                         {% endif %}
 
+                     <!-- 3 Columns ECS -->
                      <td class="td-ecs"> {% for version in document.ecs.cidev %} <li>{{ version }}</li> {% endfor %} </td>
+                     <td class="td-ecs">  <li> </li></td>
+                     <td class="td-ecs">  <li> </li></td>
 
+                     <!-- 7 Columns Dep Track (Version specific) -->
                      <td class="td-bom-import"><span>{{ depTrackLink(version.uuid, version.lastBomImport | date("YYYY-MM-DD")) }}</span><br><span class="days-ago">({{ version.lastBomImport | daysAgo }})</span></td>
                      <td class="td-critical">
                         {% if version.metrics.critical != 0 %}
