--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -132,58 +132,22 @@
                      <!-- 7 Columns Dep Track (Version specific) -->
                      <td class="td-bom-import"><span>{{ depTrackLink(version.uuid, version.lastBomImport | date("YYYY-MM-DD")) }}</span><br><span class="days-ago">({{ version.lastBomImport | daysAgo }})</span></td>
                      <td class="td-critical">
-                        {% if version.metrics.critical != 0 %}
-                           <div class="rounded-number metric-critical-back">
-                        {% else %}
-                           <div class="front-number metric-critical-front">
-                        {% endif %}
-                              <span title="critical">{{ depTrackLink(version.uuid, version.metrics.critical) }}</span>
-                           </div>
+                        {{DepTrackMetrics(version.metrics.critical, "critical", version.uuid)}}
                      </td>
                      <td class="td-deptrack-high">
-                        {% if version.metrics.high != 0 %}
-                           <div class="rounded-number metric-high-back">
-                        {% else %}
-                           <div class="front-number metric-high-front">
-                        {% endif %}
-                              <span title="high">{{ depTrackLink(version.uuid, version.metrics.high) }}</span>
-                           </div>
+                        {{DepTrackMetrics(version.metrics.high, "high", version.uuid)}}
                      </td>
                      <td class="td-deptrack-medium">
-                        {% if version.metrics.medium != 0 %}
-                           <div class="rounded-number metric-medium-back">
-                        {% else %}
-                           <div class="front-number metric-medium-front">
-                        {% endif %}
-                              <span title="medium">{{ depTrackLink(version.uuid, version.metrics.medium) }}</span>
-                           </div>
+                        {{DepTrackMetrics(version.metrics.medium, "medium", version.uuid)}}
                      </td>
                      <td class="td-deptrack-low">
-                        {% if version.metrics.low != 0 %}
-                           <div class="rounded-number metric-low-back">
-                        {% else %}
-                           <div class="front-number metric-low-front">
-                        {% endif %}
-                              <span title="low">{{ depTrackLink(version.uuid, version.metrics.low) }}</span>
-                           </div>
+                        {{DepTrackMetrics(version.metrics.low, "low", version.uuid)}}
                      </td>
                      <td class="td-deptrack-vulnerabilities">
-                        {% if version.metrics.vulnerabilities != 0 %}
-                           <div class="rounded-number metric-vulnerabilities-back">
-                        {% else %}
-                           <div class="front-number metric-vulnerabilities-front">
-                        {% endif %}
-                              <span title="vulnerabilities">{{ depTrackLink(version.uuid, version.metrics.vulnerabilities) }}</span>
-                           </div>
+                        {{DepTrackMetrics(version.metrics.vulnerabilities, "vulnerabilities", version.uuid)}}
                      </td>
                      <td class="td-deptrack-components">
-                        {% if version.metrics.components != 0 %}
-                           <div class="rounded-number metric-components-back">
-                        {% else %}
-                           <div class="front-number metric-components-front">
-                        {% endif %}
-                              <span title="components">{{ depTrackLink(version.uuid, version.metrics.components, "components") }}</span>
-                           </div>
+                        {{DepTrackMetrics(version.metrics.components, "components", version.uuid, "components")}}
                      </td>
             </tr>
             {% endfor %}
@@ -197,18 +161,26 @@
    <span class="footer-text">Built by <a href="https://github.com/companieshouse/services-dashboard-web" class="footer-text">Companies House</a></span>
 {% endblock %}
 
-{% macro depTrackLink(uuid, val, arg) %}
-    {% if uuid %}
-        <a class="deptrack-link" href="{{ depTrackUri }}/projects/{{ uuid }}/{{ arg }}">{{val}}</a>
-    {% else %}
-        {{ val }}
-    {% endif %}
-{% endmacro %}
-
 {% macro sonarLink(sonarKey, val) %}
     {% if sonarKey %}
         <a class="sonar-link" href="{{ sonarUri }}/dashboard?id={{ sonarKey | urlencode }}">{{val}}</a>
     {% else %}
         {{ val }}
     {% endif %}
+{% endmacro %}
+
+{% macro DepTrackMetrics(metricVal, metricClass, uuid, arg) %}
+    {% if metricVal != 0 %}
+         <div class="rounded-number metric-{{ metricClass }}-back">
+    {% else %}
+         <div class="front-number metric-{{ metricClass }}-front">
+    {% endif %}
+            <span title={{ metricClass }}>
+               {% if uuid %}
+                  <a class="deptrack-link" href="{{ depTrackUri }}/projects/{{ uuid }}/{{ arg }}">{{metricVal}}</a>
+               {% else %}
+                  {{ metricVal }}
+               {% endif %}
+            </span>
+         </div>
 {% endmacro %}
