--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -66,32 +66,32 @@
             </tr>
          <!-- Col Headers -->
             <tr>
-                  <th class="col-header header-service" data-type="string"> Service</th>
+                  <th class="col-header header-service" id="col-head-service" data-type="string"> Service</th>
 
-                  <th class="col-header header-git" data-type="string"> Owner</th>
-                  <th class="col-header header-git" data-type="string"> Lang</th>
-                  <th class="col-header header-git" data-type="string"> Last Release</th>
-                  <th class="col-header header-git" data-type="date">   Date</th>
+                  <th class="col-header header-git" id="col-head-git-owner"    data-type="string"> Owner</th>
+                  <th class="col-header header-git" id="col-head-git-lang"     data-type="string"> Lang</th>
+                  <th class="col-header header-git" id="col-head-git-rel-last" data-type="string"> Last Release</th>
+                  <th class="col-header header-git" id="col-head-git-rel-date" data-type="date">   Date</th>
 
-                  <th class="col-header header-sonar-metric" data-type="string"> Coverage</th>
-                  <th class="col-header header-sonar-metric" data-type="number"> Bugs</th>
-                  <th class="col-header header-sonar-metric" data-type="number"> Code smell</th>
-                  <th class="col-header header-sonar-metric" data-type="number"> Vulnerabilities</th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-coverage" data-type="string"> Coverage</th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-bugs"     data-type="number"> Bugs</th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-csmell"   data-type="number"> Code smell</th>
+                  <th class="col-header header-sonar-metric" id="col-head-sonar-vul"      data-type="number"> Vulnerabilities</th>
 
-                  <th class="col-header header-version"   data-type="string"> Version</th>
-                  <th class="col-header header-version"   data-type="string"> Runtime</th>
+                  <th class="col-header header-version" id="col-head-deptk-version"   data-type="string"> Version</th>
+                  <th class="col-header header-version" id="col-head-deptk-runtime"   data-type="string"> Runtime</th>
 
-                  <th class="col-header header-ecs"   data-type="string"> cidev</th>
-                  <th class="col-header header-ecs"   data-type="string"> staging</th>
-                  <th class="col-header header-ecs"   data-type="string"> live</th>
+                  <th class="col-header header-ecs" id="col-head-ecs-cidev"   data-type="string"> cidev</th>
+                  <th class="col-header header-ecs" id="col-head-ecs-stag"    data-type="string"> staging</th>
+                  <th class="col-header header-ecs" id="col-head-ecs-live"    data-type="string"> live</th>
 
-                  <th class="col-header header-deptrack" data-type="date"  >Last BOM</th>
-                  <th class="col-header header-deptrack header-dt-metric" data-type="number">Critical</th>
-                  <th class="col-header header-deptrack header-dt-metric" data-type="number">High</th>
-                  <th class="col-header header-deptrack header-dt-metric" data-type="number">Medium</th>
-                  <th class="col-header header-deptrack header-dt-metric" data-type="number">Low</th>
-                  <th class="col-header header-deptrack header-dt-metric" data-type="number">Vulner.</th>
-                  <th class="col-header header-deptrack header-dt-metric" data-type="number">Compon.</th>
+                  <th class="col-header header-deptrack"  id="col-head-deptk-date"data-type="date"  >Last BOM</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mcrit" data-type="number">Critical</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mhigh" data-type="number">High</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mmed"  data-type="number">Medium</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mlow"  data-type="number">Low</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mvul"  data-type="number">Vulner.</th>
+                  <th class="col-header header-deptrack header-dt-metric" id="col-head-deptk-mcomp" data-type="number">Compon.</th>
             </tr>
          </thead>
          <tbody>
