--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,20 +1,102 @@
-/* ------------ MAIN CONTAINERS ------------ */
-body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    font-family: Arial, sans-serif;
-}
-header, footer  {
+/* public/css/styles.css */
+
+/* Reset and basic styles */
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+ }
+ 
+ body, html {
+   height: 100%;
+   font-family: Arial, sans-serif;
+ }
+ 
+ .fixed-header {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 60px; /* Fixed height */
    background-color: #333;
-   color: white;
-   text-align: center;
-   padding: 10px 0;
-   flex-shrink: 0;
-}
-/* ------------ HEADER LOGO ------------ */
+   color: #fff;
+   display: flex;
+   align-items: center;
+   padding: 0 20px;
+   z-index: 1000;
+ }
+ 
+ .fixed-footer {
+   position: fixed;
+   bottom: 0;
+   left: 0;
+   width: 100%;
+   height: 40px; /* Fixed height */
+   background-color: #333;
+   color: #fff;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   z-index: 1000;
+ }
+ 
+ .main-content {
+   display: flex;
+   flex-direction: column;
+   height: 100%;
+   padding-top: 60px; /* Height of header */
+   padding-bottom: 40px; /* Height of footer */
+ }
+ 
+ .tab-nav {
+   background-color: #f4f4f4;
+   border-bottom: 1px solid #ccc;
+ }
+
+ 
+ .tab-nav ul {
+   list-style: none;
+   display: flex;
+ }
+ 
+ .tab-nav li {
+   margin-right: 10px;
+ }
+ 
+ .tab-nav a {
+   display: block;
+   padding: 15px 20px;
+   text-decoration: none;
+   color: #333;
+ }
+ 
+ .tab-nav a.active {
+   background-color: #ddd;
+   font-weight: bold;
+ }
+ 
+ .tab-content {
+   flex: 1;
+   padding: 20px;
+   overflow: auto; /* Enables both vertical and horizontal scrollbars if needed */
+   background-color: #fff;
+ }
+  
+ /* .tab-content { 
+   display: flex;
+   flex-direction: column;
+   padding: 0; /* Remove padding if necessary *
+   /* Additional styles specific to tab1 *
+ } */
+ 
+ /* .tab-content.services {
+   flex: 1;
+   display: flex;
+   flex-direction: column;
+   /* Inner elements should handle their own scrolling *
+ } */
+
+ /* ------------ HEADER LOGO ------------ */
       .header-container {
          display: flex;
          justify-content: space-between;
@@ -25,294 +107,42 @@ header, footer  {
          box-sizing: border-box; /* Ensures padding and margin are included in the width calculation */
       }
 
-         .header-left-content {
-            display: flex;
-            align-items: center;
-         }
-
-         .header-center-content {
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-         }
-
-         .header-right-content {
-            position: absolute;
-            right: 5%;
-            transform: translateX(5%);
-         }
-
-         .header-logo {
-            width: 50px;
-            height: auto;
-            margin-right: 10px;
-         }
-
-         .header-logo-text {
-            font-size: 28px;
-            color: white;
-            text-decoration: none;
-         }
-
-         .header-center-text {
-            font-size: 18px;
-            color: white;
-         }
-
-         .footer-text {
-            font-size: 12px;
-            color: white;
-            text-decoration: none;
-         }
-
-.container {
-   display: flex;
-   flex: 1;
-   overflow: hidden;
-   background-color: white;
-}
-
-
-.menu {
-   background-color: #aca8a8;
-   width: 18%;
-   min-width: 100px;
-   overflow: auto;
-   padding: 10px;
-   box-sizing: border-box;
-   flex-shrink: 0;
-   position: relative;
-}
-/* ------------ CSS FOR MENU ITEMS ------------ */
-      .sticky-header {
-         position: sticky;
-         top: 0;
-         padding-bottom: 10px;
-         z-index: 10;
+      .header-left-content {
+         display: flex;
+         align-items: center;
       }
 
-      .menu  div {
-         margin-bottom: 10px;
+      .header-center-content {
+         position: absolute;
+         left: 50%;
+         transform: translateX(-50%);
       }
-      .menu  div > div {
-         margin-left: 20px;
+
+      .header-right-content {
+         position: absolute;
+         right: 5%;
+         transform: translateX(5%);
       }
 
-.content {
-   background-color: #e9e9e9;
-   width: 82%;
-   overflow:  auto;
-   padding: 10px;
-   box-sizing: border-box;
-}
+      .header-logo {
+         width: 50px;
+         height: auto;
+         margin-right: 10px;
+      }
 
+      .header-logo-text {
+         font-size: 28px;
+         color: white;
+         text-decoration: none;
+      }
 
-/* ------------ CSS FOR MAIN TABLE ------------ */
+      .header-center-text {
+         font-size: 18px;
+         color: white;
+      }
 
-.table-services-container {
-   width: 100%;
-   height: 100%;
-   overflow-y: auto; /* Enable vertical scrolling */
-   border: 1px solid #ddd;
- }
-
-table {
-   width: 100%;
-   border-collapse: collapse;
-}
-
-thead {
-   position: sticky;
-   top: 0;
-   background-color: #f8f8f8;
-   z-index: 1; /* Ensure the header stays on top */
-   box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4); /* shadow for better visibility */
-}
-
-.group-header {
-   font-size: 14px;
-}
-
-.group-service,
-.group-sonar,
-.group-ecs {
-   background-color: #e1b4b4;
-}
-
-.group-git,
-.group-version,
-.group-deptrack {
-   background-color: #f6a8a8;
-}
-
-.col-header {
-   font-size: 16px;
-   cursor: pointer;
-}
-
-.header-service,
-.header-sonar-metric,
-.header-ecs {
-   background-color: #9e9c9c;
-}
-
-.header-git,
-.header-version,
-.header-deptrack {
-   background-color: #c7c6c6;
-}
-
- #sortableTable th:hover {
-   background-color: #ddd;
- }
-
-tbody tr {
-   border-top: 1px solid #ddd;
-}
-
-tbody td {
-   padding: 8px;
-}
-
-/* ------------ CSS FOR TABLE HEADER ------------ */
-.header-sonar-metric,
-.header-ecs,
-.header-dt-metric {
-   writing-mode: vertical-rl;
-}
-
-/* ------------ CSS FOR TABLE TD ------------ */
-.td-name a,
-.td_git-owner a,
-.td_git-lang a,
-.td-git-version a,
-.td-git-date a {
-   color: rgb(0, 0, 0);
-   text-decoration: none;
-}
-.td-name a {
-   font-size: 10px;
-   color: rgb(224, 118, 52);
-}
-.td-version {
-   font-size: 12px;
-   background-color: #ddd;
-   color: rgb(224, 118, 52);
-}
-.deptrack-link,
-.sonar-link  {
-   text-decoration: none;
-   color: inherit; /* Inherit color from parent */
-}
-
-/* ------------ CSS FOR NUMBERS/ METRICS ------------ */
-
-.front-number {
-   font-size: 10px;
-   font-weight: bold;
-}
-
-.rounded-number {
-   display: inline-block;
-   color: #ffffff; /* Font color */
-   font-size: 10px;
-   font-weight: bold;
-   padding: 5px 10px; /* Padding around the text */
-   border-radius: 10px; /* Rounded corners */
-   margin: 2px; /* Space around each element */
-   text-align: center; /* Aligns text horizontally */
-}
-
-.metric-critical-back {
-   background-color: #ef3017;
-}
-.metric-high-back {
-   background-color: #dd6119;
-}
-.metric-medium-back {
-   background-color: #494e49;
-}
-.metric-low-back {
-   background-color: #9e9595;
-}
-.metric-vulnerabilities-back {
-   background-color: #dc32ef;
-}
-.metric-components-back {
-   background-color: #444aef;
-}
-
-
-.metric-critical-front {
-   color: #ef3017;
-}
-.metric-high-front {
-   color: #dd6119;
-}
-.metric-medium-front {
-   color: #494e49;
-}
-.metric-low-front {
-   color: #9e9595;
-}
-.metric-vulnerabilities-front {
-   color: #dc32ef;
-}
-.metric-components-front {
-   color: #444aef;
-}
-
-/* ------------ CSS FOR DATES ------------ */
-
-.days-ago {
- font-style: italic;
- color: #7689d3;
-}
-
-/* ------------ CSS FOR SORTING THE TABLE ------------ */
-
-/* Change the cursor to pointer and add hover effect */
-.column-sort {
-   cursor: pointer;
-   color: inherit; /* maintain the text color */
- }
-
- .column-sort:hover {
-   text-decoration: underline;
-   color: blue; /* change the color on hover */
- }
-
- /* ------------ CSS FOR RUNTIME LIST ------------ */
-
-.td-runtime-info {
-   margin-left: 0;     /* Remove left margin */
-   padding-left: 0px;  /* Reduce left padding (or set to 0 for no indentation) */
-   list-style-position: inside; /* Ensure bullet points align with the text */
-  }
-
- /* ------------ CSS FOR SHARE BUTTON & RESPONSE ------------ */
-
-  #share-status-message {
-   display: none; /* Hidden by default */
-   margin-top: 10px;
-   padding: 5px 10px;
-   border-radius: 4px;
-   font-size: 14px;
-   position: relative;
-}
-
-#share-status-message.ok {
-   background-color: #d4edda;
-   color: #155724;
-   border: 1px solid #c3e6cb;
-}
-
-#share-status-message.error {
-   background-color: #f8d7da;
-   color: #721c24;
-   border: 1px solid #f5c6cb;
-}
-
-#share-status-icon {
-   margin-right: 5px;
-}
+      .footer-text {
+         font-size: 12px;
+         color: white;
+         text-decoration: none;
+      }      
