--- a/views/layout.njk
+++ b/views/layout.njk
@@ -2,32 +2,49 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!--[if !IE 8]><!-->
-   <link rel="stylesheet" type="text/css" media="all" href="//{{CDN_HOST}}/stylesheets/govuk-frontend/v4.6.0/govuk-frontend-4.6.0.min.css" />
-   <link rel="stylesheet" type="text/css" media="all" href="//{{CDN_HOST}}/stylesheets/services/overseas-entities/application.css"  />
-   <!--<![endif]-->
+   <title>{{ title }}</title>
    <link rel="stylesheet" href="/css/styles.css">
-   <title>{% block title %}Services Dashboard{% endblock %}</title>
    <script> window.shareLinkState = "{{ state | safe }}"; </script>
    <script src="/js/libs/pako/2.0.4/pako.min.js"></script>
-   <script src="/js/utils.js"></script>
+   <script src="/js/tabServices.js"></script>
+   <script src="/js/layout.js"></script>
 </head>
 <body>
-   <header>
-      {% block header %}Header{% endblock %}
+   <header class="fixed-header">
+      <link rel="SHORTCUT ICON" href="//{{CDN_HOST}}/images/favicon.ico" />
+      <div class="header-container">
+         <div class="header-left-content">
+               <img src="//{{CDN_HOST}}/images/royal-coat-of-arms-white.svg" alt="Logo" class="header-logo">
+               <a href="https://www.gov.uk/government/organisations/companies-house" class="header-logo-text">Companies House</a>
+         </div>
+         <div class="header-center-content">
+               <span class="header-center-text">Services</span>
+         </div>
+               <div class="header-right-content">
+                  <button id="button-share">share</button>
+                     <div id="share-status-message">
+                        <span id="share-status-icon"></span>
+                        <span id="share-status-text"></span>
+                     </div>
+               </div>
+            </div>
+         </div>
    </header>
 
-    <div class="container">
-      <aside class="menu">
-               {% block menu %}Menu{% endblock %}
-      </aside>
-      <main class="main">
-               {% block content %}Main{% endblock %}
-      </main>
-    </div>
-   <footer>
-      {% block footer %}Footer{% endblock %}
-   </footer>
+   <div class="main-content">
+      <nav class="tab-nav">
+         <ul>
+         {% for tab in tabs %}
+            <li><a href="#" class="tab-link" data-tab="{{ tab.key }}">{{ tab.title }}</a></li>
+         {% endfor %}
+         </ul>         
+      </nav>
+
+      {# Placeholder for the various tabs #}  <div id="tab-content-id" class="tab-content" ></div>
+
+   </div>
+   <footer class="fixed-footer">
+         <span class="footer-text">Built by <a href="https://github.com/companieshouse/services-dashboard-web" class="footer-text">Companies House</a></span>
+   </footer>  
 </body>
 </html>
